# VSCode

PatternsInCpp/: README.md
PatternsInCpp/InterfaceSeparationPrinciple/: CMakeLists.txt
PatternsInCpp/InterfaceSeparationPrinciple/include/: document.hpp  faxInterface.hpp  printerInterface.hpp  printerScanner.hpp  printerScannerInterface.hpp  purePrinter.hpp  scannerInterface.hpp
PatternsInCpp/InterfaceSeparationPrinciple/src/: document.cpp  main.cpp  printerScanner.cpp  purePrinter.cpp
PatternsInCpp/OpenClosed/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  OpenClosed  cmake_install.cmake
PatternsInCpp/OpenClosed/src/: color.hpp  colorCriteria.cpp  colorCriteria.hpp  criteria.hpp  filter.cpp  filter.hpp  main.cpp  product.cpp  product.hpp  size.hpp
PatternsInCpp/SimpleBuilder/: CMakeLists.txt
PatternsInCpp/SimpleBuilder/src/: htmlBuilder.cpp  htmlElement.cpp  main.cpp
PatternsInCpp/SimpleBuilder/src/include/: htmlBuilder.hpp  htmlElement.hpp
theme/akamud.vscode-theme-onelight-2.2.2/: .vsixmanifest  package.json
theme/akamud.vscode-theme-onelight-2.2.2/themes/: OneLight.json
